<package format="2">
  <name>ackermann_steering_controller</name>
  <version>0.15.1</version>
  <description>Controller for ackermann steering drive mobile bases.</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>

  <license>BSD</license>

  <url type="website">https://wiki.ros.org/ackermann_steering_controller</url>
  <url type="bugtracker">https://github.com/ros-controls/ros_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros_controllers</url>

  <author email="p595201m@mail.kyutech.jp">Masaru Morita</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>controller_interface</depend>
  <depend>diff_drive_controller</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>urdf</build_depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>controller_manager_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/ackermann_steering_controller_plugins.xml"/>
  </export>
</package>
